[package]
name = "rusty-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.83", features = ["span-locations"] }
swc = "0.275.1"
swc_compiler_base = "0.9.0"
swc_core = { version = "0.92.5", features = ["__common"] }
swc_ecma_ast = "0.113.4"
swc_ecma_codegen = "0.149.1"
swc_ecma_visit = "0.99.1"
syn = { version = "2.0.65", features = ["full"] }
